[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
anyhow = "1.0.95"
# cryptography
libp2p = { version = "0.55.0", features = ["full"] }
# serialization
serde = { version = "1.0.217", features = ["default", "serde_derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
